fix issue where navbar had extra padding on some pages

--- a/geothermalsite/static/css/about.css
+++ b/geothermalsite/static/css/about.css
@@ -2,7 +2,7 @@
     padding-left: 5%;
 }
 
-.container-fluid {
+#about-container {
     padding-left: 5%;
     padding-right: 5%;
 }
