--- a/geothermalsite/static/css/documentation.css
+++ b/geothermalsite/static/css/documentation.css
@@ -6,7 +6,7 @@
     padding-left: 5%;
 }
 
-.container-fluid {
+#documentation-container {
     padding-left: 5%;
     padding-right: 5%;
 }
